styles:grid: maybe fix spacing between components

--- a/content/themes/vac/assets/src/sass/base/_grid.scss
+++ b/content/themes/vac/assets/src/sass/base/_grid.scss
@@ -32,7 +32,7 @@ $grid-outer-padding: baselines(4);
 }
 
 .component {
-    margin-bottom: baselines(12);
+    margin-bottom: baselines(13);
 
     img {
         width: 100%;
